dashboard/dashboard_gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: dashboard-gateway
  namespace: kubernetes-dashboard
spec:
  selector:
    istio: ingressgateway  # Use Istio's ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - dashboard.com
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: dashboard-virtualservice
  namespace: kubernetes-dashboard
spec:
  hosts:
  - dashboard.com
  gateways:
  - dashboard-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: kubernetes-dashboard
        port:
          number: 80
